2.0.0 (#8)
* Pulled dependency down to java 8

* Added svg-content to CountryFlag

* Updated README